--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -81,30 +81,29 @@
     </div>
 
     <!-- Footer -->
-    <footer class="footer">
-      <!-- replace with your own email address -->
+    <footer class="footer" id="footer">
       <a href="mailto:lucasyoshio0@gmail.com" class="footer__link"
         >lucasyoshio0@gmail.com</a
       >
       <ul class="social-list">
         <li class="social-list__item">
-          <a class="social-list__link" href="https://codepen.io">
-            <i class="fab fa-codepen"></i>
+          <a href="https://instagram.com" class="social-list__link">
+            <i class="fa-brands fa-instagram-square"></i>
           </a>
         </li>
         <li class="social-list__item">
-          <a class="social-list__link" href="http://dribbble.com">
-            <i class="fab fa-dribbble"></i>
+          <a href="https://linkedin.com" class="social-list__link">
+            <i class="fa-brands fa-linkedin"></i>
           </a>
         </li>
         <li class="social-list__item">
-          <a class="social-list__link" href="https://twitter.com">
-            <i class="fab fa-twitter"></i>
+          <a href="https://github.com" class="social-list__link">
+            <i class="fa-brands fa-github"></i>
           </a>
         </li>
         <li class="social-list__item">
-          <a class="social-list__link" href="https://github.com">
-            <i class="fab fa-github"></i>
+          <a href="https://twitter.com" class="social-list__link">
+            <i class="fa-brands fa-twitter-square"></i>
           </a>
         </li>
       </ul>
